Changed Header name and css changes

--- a/transaction-history/src/index.css
+++ b/transaction-history/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+th {
+     background-color: #d2e0e0;
+}
+
